# CiviCalc

./: README.md  run.bat  run.sh
flask-server/: .env.example  app.py  pyproject.toml  requirements.txt
react-app/: .env  package-lock.json  package.json
react-app/public/: index.html
react-app/src/: App.css  App.js  index.css
react-app/src/components/: ChatBox.js  ChatMessage.js
