[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["Chaitanya Patil <chaitanyapatil2005@gmail.com>"]

[[tool.poetry.packages]]
include = "app.py"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-Cors = "^5.0.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.3"
langchain-core = "^0.3.12"
langgraph = "^0.2.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
